Update partial division
Put menu_links editor in it's own partial. Some minor UI tweaks also
added.

--- a/app/views/admin/communities/_new_listing_button.haml
+++ b/app/views/admin/communities/_new_listing_button.haml
@@ -1,8 +1,6 @@
-- show_locales = available_locales.size > 1
+%h3= t("admin.communities.topbar.new_listing_button_label")
 
-%h2= t("admin.communities.topbar.new_listing_button_label")
-
-#menu-links-table
+#post-new-listing-button-table
   .row.menu-link-container-padding.visible-tablet
     .col-10
       - if show_locales
