--- a/app/views/admin/communities/_new_menu_link.haml
+++ b/app/views/admin/communities/_new_menu_link.haml
@@ -1,4 +1,4 @@
-.row.without-margin.menu-link-container{:data => {:"field-id" => "#{menu_link_id}"}}
+.row.without-margin.topbar-menu-container{:data => {:"field-id" => "#{menu_link_id}"}}
   .col-10
     - available_locales.each do |locale_name, locale_value|
       .row
