--- a/app/views/admin/communities/_new_listing_button.haml
+++ b/app/views/admin/communities/_new_listing_button.haml
@@ -1,7 +1,7 @@
 %h3= t("admin.communities.topbar.new_listing_button_label")
 
 #post-new-listing-button-table
-  .row.menu-link-container-padding.visible-tablet
+  .row.topbar-menu-container-padding.visible-tablet
     .col-10
       - if show_locales
         .col-2
@@ -11,7 +11,7 @@
         = label_tag do
           = t("admin.communities.menu_links.title")
 
-  .row.without-margin.menu-link-container
+  .row.without-margin.topbar-menu-container
     .col-10
       - available_locales.each do |locale_name, locale_value|
         .row
